# eeUVsim_Gazebo

./: .gitignore  README.md  requirements.txt
eeuv_sim/: CMakeLists.txt  package.xml
eeuv_sim/data/dynamics/: BlueDynamics.yaml  LAUVDynamics.yaml  UCATDynamics.yaml  microCATDynamics.yaml
eeuv_sim/data/rl_setting/: rl_setting.yaml
eeuv_sim/launch/: connect_microCAT.launch.py  e2e_spawn_UCAT.launch.py  spawn_Blue.launch.py  spawn_LAUV.launch.py  spawn_UCAT.launch.py  spawn_microCAT.launch.py
eeuv_sim/models/diver/: model.config  model.sdf
eeuv_sim/models/diver/meshes/: body.dae  mask.dae
eeuv_sim/models/sand_heightmap/: model.sdf
eeuv_sim/models/sea_bottom/: model.sdf
eeuv_sim/models/sea_surface/: model.sdf
eeuv_sim/scripts/: AUVMotion.py
eeuv_sim/scripts/RL/: RL_Blue.py  RL_LAUV.py  RL_UCAT.py
eeuv_sim/scripts/actuator/: moveFins.py  moveThruster.py  moveWing.py
eeuv_sim/scripts/dynamics/: AUVDynamics.py  finDynamics.py  wingDynamics.py
eeuv_sim/scripts/tools/: test_cmd_publisher.py
eeuv_sim/urdf/: fin_snippet.xacro  thruster_snippets.xacro
eeuv_sim/urdf/Blue/: base.xacro
eeuv_sim/urdf/LAUV/: actuators.xacro  base.xacro  common.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
eeuv_sim/urdf/UCAT/: base.xacro.urdf  sensors.xacro
eeuv_sim/urdf/meshes/UCAT/: fin.dae  sonar.dae
eeuv_sim/urdf/meshes/microcat/: micro_cat_fin.dae
eeuv_sim/urdf/microcat/: base.xacro.urdf  sensors.xacro
eeuv_sim/worlds/: auv_underwater_world.world  auv_underwater_world_microcat.world  diver_world.world
eeuv_sim_interfaces/: CMakeLists.txt  package.xml
(+6 files in other folders)
